restore/harbor/harbor-rclone-azure.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-harbor-restore-rclone-move-egress
  namespace: harbor
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      job-name: harbor-restore-rclone-move
  egress:
  - {}
