restore/harbor/network-policies-harbor.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-restore-job-database
  namespace: harbor
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      component: "database"
  ingress:
    - from:
        - podSelector:
            matchLabels:
              job-name: restore-harbor-job
      ports:
        - port: 5432
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-restore-job-egress
  namespace: harbor
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      job-name: restore-harbor-job
  egress:
  - {}
